# isaac-mimic

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: domain_randomization.py  experiments.yaml
docker/: Dockerfile  docker-compose.yml
docs/: 01_isaac_lab_mimic_overview.md  02_features.md  03_project_setup.md  04_camera_and_vision.md  05_new_robot_integration.md  06_cosmos_integration.md  07_references.md  README.md
scripts/: download_dataset.sh  env.sh  run_experiments.sh  setup-remote.sh
slurm/: annotate.sh  build.sh  generate.sh  play.sh  train.sh
