[project]
name = "isaac-mimic"
version = "0.1.0"
description = "Synthetic Data Augmentation for Imitation Learning with Isaac Lab Mimic"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "isaaclab[all,isaacsim]==2.3.2",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "robomimic",
    "h5py",
    "pyyaml",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_version == '3.11'",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"
